# competencias-backend

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: views.py
aplicacao/: admin.py  apps.py
aplicacao/container/: __init__.py  container_de_dependencias.py
aplicacao/erros/: __init__.py  erro_de_aplicacao.py  erro_de_serializacao.py  erro_docente_nao_encontrado.py  erro_serializer_sem_otd_atribuido.py
aplicacao/managers/: __init__.py  usuario_manager.py
aplicacao/migrations/: 0001_initial.py  0002_modelodisciplina.py  0002_modelodocente_ativo.py  0003_modelocurso_modelomodulo_modelomoduloemcurso_and_more.py  0003_modelousuario.py
aplicacao/models/: __init__.py  modelo_competencia.py  modelo_curso.py  modelo_disciplina.py  modelo_disciplina_em_modulo.py  modelo_docente.py  modelo_modulo.py  modelo_modulo_em_curso.py  modelo_telefone.py  modelo_unidade_senai.py  modelo_usuario.py  usuario_base.py
aplicacao/otds/: __init__.py  otd_ids.py
aplicacao/repositorios/: __init__.py  repositorio_competencia.py  repositorio_curso.py  repositorio_disciplina.py  repositorio_docente.py  repositorio_modulo.py
aplicacao/serializers/: __init__.py  otd_class_nao_atribuida.py  serializer_abstrato.py  serializer_base.py  serializer_base_otd_entrada.py  serializer_base_otd_saida.py  serializer_cadastro_usuario.py  serializer_docente.py  serializer_docente_sem_id.py  serializer_login.py  serializer_modelo_usuario.py  serializer_otd_competencia.py  (+12 more)
competencias_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+247 files in other folders)
