[tool.poetry]
name = "competencias_backend"
version = "0.1.0"
description = "Prototipo do backend do TCC"
authors = ["Chico Moura"]

[tool.poetry.dependencies]
python = "^3.10.6"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
